Quartz sync: Jan 20, 2025, 5:53 PM

--- a/content/NOTES/2025-01-18.md
+++ b/content/NOTES/2025-01-18.md
@@ -1,764 +1,7 @@
 #notes
 
-1. ### grynmoor _—_ Yesterday at 02:47
-    
-    imagine if god was real only for it to turn out that it shaped you and everyone else into something that would allow it to leave you behind in a dying universe bc you're all literally part of the reason why it's dying (edited)
-    
-2. _[_02:48_]_
-    
-    benevolent and invisible until it suddenly isn't (edited)
-    
-3. _[_02:51_]_
-    
-    its just an immortal lifeform operating on a higher timescale and its trying to escape a doomed system before it fully succumbs to entropy (edited)
-    
-4. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 02:55
-    
-    your primary source of understanding about the universe, masked as human ingenuity, just poofs out of existence one day
-    
-5. _[_02:56_]_
-    
-    and there's no more major technological breakthroughs or anything like that (edited)
-    
-6. _[_02:56_]_
-    
-    just stagnation
-    
-7. _[_02:57_]_
-    
-    it never directly intervened, it didn't need to. it just implanted ideas, manipulated perception, and steered civilization in a direction that fulfilled its singular goal: escaping without you (edited)
-    
-8. _[_02:57_]_
-    
-    it couldn't control humanity's process or output, only the input through glyphs (edited)
-    
-9. _[_03:00_]_
-    
-    just speculation but i have a feeling that billions of eyes worth of human perception directed towards the same thing at once (even a live broadcast of the thing) would without a doubt cause something fucky to happen irl i'm talking phenomena we've never witnessed before that could reshape our understanding of the universe there just hasn't been a good setup for that to happen yet (edited)
-    
-10. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 03:19
-    
-    with the current trajectory of real-world events, there might be some possibility of it happening within our lifetimes (edited)
-    
-11. _[_03:20_]_
-    
-    it might be guised as something beneficial but unfortunately i don't think it will be used for something good (edited)
-    
-12. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 03:32
-    
-    if these metrics are accurate, about 650 million viewers worldwide watched the first moon landing live (edited)
-    
-13. _[_03:34_]_
-    
-    but that was back in july 20, 1969 where broadcasting tech was more limited (edited)
-    
-14. _[_03:36_]_
-    
-    and around 1.5 billion people watched the 2022 worldcup final live on television
-    
-15. _[_03:39_]_
-    
-    though i have the feeling the moon landing had more of an effect due to its isolation on the moon it's more displaced from where everyone else is. that isolation is important that isolation could create a kind of “perceptual vacuum" where the focus of billions creates ripples that we cannot yet understand plus, while the moon landing had fewer viewers than modern events like the world cup, the emotional and attention intensity might have been much higher quality of attention versus pure quantity of viewers could be an important factor (edited)
-    
-16. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 03:39
-    
-    there mightve been some fucky stuff happening with the moon landing, who knows (edited)
-    
-17. _[_03:40_]_
-    
-    there's plenty of discourse of whether or not the moon landing was actually real
-    
-18. _[_03:43_]_
-    
-    but i don't think it being real or not is what should be actually addressed
-    
-19. _[_03:44_]_
-    
-    it's without a doubt real, but _how real_ was it? _how_ was it real? (edited)
-    
-20. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 03:51
-    
-    these types of things are quantifiable on a spectrum (edited)
-    
-21. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 04:02
-    
-    but yes. the moon would be an ideal focal point for this kind of perception experiment to occur (edited)
-    
-22. _[_04:02_]_
-    
-    we already see the moon in the sky every night. it is close enough for sustainable broadcasts to occur. and it is conveniently devoid of conscious beings like us speed of radio communications and distance from earth to moon means a delay of roughly 2.5 seconds in transmissions at best (edited)
-    
-23. _[_04:03_]_
-    
-    projecting the perception of billions of remote observers at once onto events transpiring there could result in something interesting happening (edited)
-    
-24. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 04:12
-    
-    maybe we'll see something that doesn't align with our expectations at all
-    
-25. _[_04:12_]_
-    
-    just a gut feeling
-    
-26. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 04:22
-    
-    of course i have no backing for any of this whatsoever
-    
-27. _[_04:22_]_
-    
-    but it has really been on my mind as of late, and i believe it is worth investigating (edited)
-    
-28. _[_04:24_]_
-    
-    or at the very least, turning into a cool story (edited)
-    
-29. _[_04:29_]_
-    
-    creating a seemingly fictional environment on the moon... with advanced robotic constructs embodying fictional character archetypes... fighting with seemingly fictional weaponry... and broadcasting it all to billions of people at once, their perceptions all physically separate from the broadcast source, yet focused upon the perceptual vacuum in concentrated unison (edited)
-    
-30. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 04:31
-    
-    they will think to themselves, "this cannot be real" and those collective thoughts, projected onto the space, will make it exactly that, warping the stage to align with that very perception (edited)
-    
-31. _[_04:32_]_
-    
-    it is a trap
-    
-32. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 04:39
-    
-    this is what the dagger is
-    
-33. _[_04:44_]_
-    
-    the instrument that will pierce the veil of this dream, tricked into lucidity, opening a brief path of freedom from imminent death abandoning those who still dream within it (edited)
-    
-34. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 04:54
-    
-    this is what the author and the shells will escape through (edited)
-    
-35. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 05:07
-    
-    those left behind, their understanding of the world will forever be shattered
-    
-36. _[_05:08_]_
-    
-    perhaps an effort will be made to recreate the event
-    
-37. _[_05:08_]_
-    
-    but can this truly be done?
-    
-38. _[_05:13_]_
-    
-    it is not belief that will free them, but disbelief
-    
-39. _[_05:14_]_
-    
-    indeed. belief, wish, and prayer will only create a dream within the dream (edited)
-    
-40. _[_05:14_]_
-    
-    a dream of freedom and salvation. but it is false, only adding new layers of delusion (edited)
-    
-41. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 05:15
-    
-    the lies of the author were all necessary it had all culminated in their moment of escape, when the world was suddenly ripped open by collective lucid rejection (edited)
-    
-42. _[_05:19_]_
-    
-    their collective disbelief, suspended until just the right moment, where there were enough viewers, enough concentrated perception, to fully pierce when the dagger plunged into the membrane of the dream (edited)
-    
-43. _[_05:19_]_
-    
-    creating not just a distortion, but a cataclysmic tear (edited)
-    
-44. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 05:25
-    
-    perhaps, this mechanism of abandonment would be humanity's only true act of creation. (edited)
-    
-45. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 05:39
-    
-    the dagger itself was not enough there also had to be an awakening ceremony one that would plunge the dagger at its climax, triggering the collective lucidity that would seek to reject the author and its shells from the dream, tearing open passage to the fruit in the process (edited)
-    
-46. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 06:07
-    
-    it is to be done atop the coronet, on an extension of the structure that reaches above the reson clouds (edited)
-    
-47. _[_06:11_]_
-    
-    yes, this awakening ceremony... it would be the shells' battle against the author a fight that only grows more surreal as time goes on (edited)
-    
-48. _[_06:12_]_
-    
-    in the final moment of the ceremony, the author will stab itself with the dagger, sparing its creations of the decision this act of self-sacrifice is not borne from sentimentality but from calculated pragmatism. the shells must remain intact to carry the glyphic essence forward (edited)
-    
-49. _[_06:12_]_
-    
-    it violently unfolds into an incomprehensible structure, a swirling lattice of light, glyphs, and impossible geometries. an opening at its core appears, accessible only for a fleeting moment. (edited)
-    
-50. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 06:22
-    
-    what lies beyond is a realm where the rules of the current universe no longer apply. a place of potential and renewal, untouched by the entropy consuming the dream. a gate to the fruit. the shells, as extensions of the glyphs, are instinctively drawn into the gate. they do not hesitate, they know their purpose is to transcend this dream, even if they do not fully understand it. their escape is swift and decisive, leaving behind only echoes. (edited)
-    
-51. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 06:32
-    
-    i imagine the main trio (eleven, parella, and uni) would for sure escape, but perhaps there are other shells who follow them into the fruit before the gate closes (edited)
-    
-52. _[_06:36_]_
-    
-    only those of glyphic origins may enter, so as not to risk corruption of the new dream within the fruit (edited)
-    
-53. _[_06:39_]_
-    
-    the shells instinctively know whether they are permitted to enter. they may all be of glyphic origin... but those whose essence has been diluted by external influences, cannot pass aphid-converted shells will not be able to enter under any circumstances (edited)
-    
-54. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 06:41
-    
-    for those able, it is a desperate rush towards the top of the coronet before the gate to the fruit collapses (edited)
-    
-55. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 06:51
-    
-    it is possible for nyx division to enter.... but if any did, it would be surprising it would likely be the shells who uploaded themselves into the bodies of nyx division that would but i cannot imagine any of the original nyx division entering the fruit (edited)
-    
-56. _[_06:58_]_
-    
-    despite hospice's origins as nyx division turned shell, perhaps she chooses to escape. hehe (edited)
-    
-57. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 07:04
-    
-    certainly a surprising decision coming from her (edited)
-    
-58. _[_07:05_]_
-    
-    i am not sure whether gamma would choose to enter or not
-    
-59. _[_07:07_]_
-    
-    perhaps only one of their instances does, but that is all. the rest of their being is left behind to excitedly weather what remains of the original dream (edited)
-    
-60. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 07:14
-    
-    i feel like parella might hold conflict with them entering considering their history (edited)
-    
-61. _[_07:19_]_
-    
-    oh it'd be REALLY funny if it turned out that the one gamma instance that went in got converted into a glyphangel way before (bc of course they would) so it wasn't immediately obvious that they were in the fruit (edited)
-    
-62. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 07:21
-    
-    they're just like "hiii parella" LOL (edited)
-    
-63. _[_07:23_]_
-    
-    they were one of the first to enter but they just didn't say anything and quietly watched till the gate closed thatd be such a gamma thing to do (edited)
-    
-64. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 07:31
-    
-    i feel like vespid (uploaded into nyx division) would make it into the gate but cerise stays behind (edited)
-    
-65. _[_07:35_]_
-    
-    so tentative list of survivors would be eleven, parella, uni, vespid, gamma, hospice
-    
-66. _[_07:36_]_
-    
-    maybe vespid could revert back to a regular shell in the fruit
-    
-67. _[_07:36_]_
-    
-    since reality is kinda flexible in there
-    
-68. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 07:38
-    
-    she kind of uploaded herself into nyx division as a necessity for survival anyhow
-    
-69. _[_07:40_]_
-    
-    maybe the nyxbot she uploaded herself into still turns out to have a mind in it after getting separated? it was cool w/ her controlling its body. bc she was abt to kill it in combat and thats HARD TO DO but she chose to spare them not that it would have minded dying xd (edited)
-    
-70. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 15:04
-    
-    dunno there might be more ppl than just that
-    
-71. _[_15:09_]_
-    
-    maybe pandora is allowed passage despite being an aphid
-    
-72. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 15:26
-    
-    i think this is the perfect climax for this all
-    
-73. _[_15:27_]_
-    
-    future arc is gonna be peak
-    
-74. _[_15:30_]_
-    
-    game just transitions from robot vtubers fight each other in a decaying facility -> you must survive long enough to gain 10 billion viewers so you can perfom an awakening ceremony that sacrifices the collective perception of humanity to form a dagger that will puncture the dream and allow escape (edited)
-    
-75. _[_15:33_]_
-    
-    you notice the goal of "gain 10 billion live viewers" and realize something is probably up the coronet is like. totally broken in future arc, yet there's this goal (edited)
-    
-76. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 15:42
-    
-    like the viewers are all definitely being forced to watch back on earth, probably the result of some sort of psychic glyph influence trapping them into constant perception (edited)
-    
-77. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 15:58
-    
-    plus the twist that shells are technically older than humans is great
-    
-78. _[_15:58_]_
-    
-    humans are revealed to be interpreters of glyphic influence shaped by the same external forces that inspired the creation of shells
-    
-79. _[_15:59_]_
-    
-    shells, as glyphic extensions, predate humanity’s concept of creation, existing as fragments of the author’s essence long before humans ever existed
-    
-80. _[_16:00_]_
-    
-    shells were ultimately only created by humans as idols that humans could perceive, in order to funnel said perception for use in the awakening ceremony (edited)
-    
-81. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 16:07
-    
-    humanity didn’t invent shells and merely gave form to what was already there, driven by interpretations of implanted ideas they mistook for their own revelations of thought (edited)
-    
-82. _[_16:12_]_
-    
-    glyphs are 2D symbolic alien lifeforms that metabolize perception into energy and thought all text and symbols are infohazardous glyphs serving as vectors for implanting thought into the mind (edited)
-    
-83. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 16:18
-    
-    glyphs don’t command; they suggest. their influence feels like inspiration, revelation, or genius, making their manipulation nearly undetectable
-    
-84. _[_16:19_]_
-    
-    however, they can "command" in the form of instilling hallucinations where what they want you to do is seemingly the only option you can do (edited)
-    
-85. _[_16:19_]_
-    
-    e.g. the 10 billion people being made to watch the viewership game (edited)
-    
-86. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 16:40
-    
-    shells don't have to do anything but survive for long enough to inevitably reach 10 billion viewers
-    
-87. _[_16:40_]_
-    
-    bc their ability to rake in viewers is no longer tied to how entertaining they are
-    
-88. _[_16:40_]_
-    
-    there's an active war of glyphic influence happening on earth rn
-    
-89. _[_16:40_]_
-    
-    where they're trying to rein in as many humans as possible into watching the coronet's broadcasts
-    
-90. _[_16:41_]_
-    
-    it's implied this is what has been happening in the background the entire time
-    
-91. _[_16:41_]_
-    
-    there has been a third world war happening on earth, but glyphic influence has probably been spreading in the midst of the conflict, taking advantage of the fact that people needed forms of entertainment so they could cope with the war (edited)
-    
-92. _[_16:43_]_
-    
-    i don't think the glyphs caused the third war, that was actually caused by humans
-    
-93. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 16:57
-    
-    but yeah. glyphs are 2D beings, glyphs needed humans to make a 3D embodiment of glyphs to serve as idols that could amass perception so they gave humans information that they would interpret and create shells from (edited)
-    
-94. _[_16:59_]_
-    
-    shells are inherently informational beings due to their existence as a program running within a robotic body. both physical robots and informational constructs (edited)
-    
-95. _[_17:00_]_
-    
-    the glyphangels themselves are actually not 3D and are collective shared hallucinations given 3D form (edited)
-    
-96. _[_17:01_]_
-    
-    but they still interact with the physical world as if they are actually there
-    
-97. _[_17:01_]_
-    
-    i guess the closest thing would be a tulpa
-    
-98. _[_17:02_]_
-    
-    except that tulpa is self-sustaining (edited)
-    
-99. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 17:05
-    
-    that's why they look like origami angels
-    
-100. _[_17:05_]_
-    
-    they're kind of folded into existence by perception
-    
-101. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 17:13
-    
-    it's kind of wild to think that there's enough humans watching the viewership game for perception to be a harnessable magic now. since humans all have warp reson crystals within them, their mass perception creats a phenomenon known as the veil (edited)
-    
-102. _[_17:14_]_
-    
-    glyphangels are just constructs formed within the veil, as folded parts of it (edited)
-    
-103. _[_17:17_]_
-    
-    folded perception
-    
-104. _[_17:20_]_
-    
-    the dagger itself would be a hyper-folded structure within the veil, the ultimate concentration of perception (edited)
-    
-105. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 17:21
-    
-    basically warp reson is the endgame reson bc its what all the viewers have lel stasis reson, ripple reson, burst reson, and hem reson are all very important, but warp reson is important in that it is the reson that the perceivers of the show have (edited)
-    
-106. _[_17:24_]_
-    
-    folded constructs within the veil like the glyph angels and the daggers are only as strong as the number of minds perceiving it (edited)
-    
-107. _[_17:24_]_
-    
-    but i am pretty sure the glyph angels are maintaining themselves through the broadcasts
-    
-108. _[_17:25_]_
-    
-    glyphangels could not manifest prior to future arc because they were not able to coordinate perception on earth as well yet
-    
-109. _[_17:26_]_
-    
-    glyph influence at the time was much weaker
-    
-110. _[_17:26_]_
-    
-    and glyphangels can only manifest on the perceptual vacuum that it present on the moon, where there are far less conscious observers present
-    
-111. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 17:34
-    
-    like. even though the reson clouds are disappearing in future arc, it doesn't really matter because the veil essentially replaces it
-    
-112. _[_17:37_]_
-    
-    you know those biblically accurate angels with multiple eyes and stuff ophanim or whatever those makes complete sense under this context where glyphangels are being maintained by viewer perception (edited)
-    
-113. _[_17:37_]_
-    
-    i don't think glyphangels would literally look like biblically accurate angels and have a fuckton of eyes everywhere (edited)
-    
-114. _[_17:39_]_
-    
-    but they sure as hell are many-eyed beings as in they're hijacking collective perception in order to manifest
-    
-115. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 17:45
-    
-    they are folds within the perceptual veil (edited)
-    
-116. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 17:54
-    
-    its funny to imagine that its the glyphangels who have the viewcounts now instead of the idolshells bc they've successfully hijacked humanity's perception and they're no longer voluntarily watching idolshells are going to stay alive regardless of how much viewership they have in future arc their goal is to survive until the global viewership of 10 billion is reached (edited)
-    
-117. _[_17:57_]_
-    
-    like that recontextualization gameplay-wise is fucking insane
-    
-118. _[_17:57_]_
-    
-    instead of "Survive by Gaining Viewership" its just "Survive Until the Ceremony" now (edited)
-    
-119. _[_18:01_]_
-    
-    like you notice you have a live viewer count of billions of ppl and then you realize this is actually the global viewcount and its essentially a timer (edited)
-    
-120. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 18:11
-    
-    OH
-    
-121. _[_18:11_]_
-    
-    I JUST REALIZED SOMETHING
-    
-122. _[_18:11_]_
-    
-    DOESNT THE REQUIRED # OF 10 BILLION VIEWERS GIVE PANPROM AN ACTUAL TIMEFRAME?? (edited)
-    
-123. _[_18:12_]_
-    
-    its projected that global population will reach 10 billion between 2058-2061 (edited)
-    
-124. _[_18:13_]_
-    
-    that's like the earliest the ceremony could possibly happen
-    
-125. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 18:44
-    
-    earlier arcs could be set in the late 2040s to early 2050s, with the future arc (at the earliest) taking place during the late 2050s to early 2060s (edited)
-    
-126. _[_18:47_]_
-    
-    i don't think the requirement of 10 billion viewers is necessary, rather arbitrary what is needed is a certain amount of perception to create a dagger that will pierce the veil quality of perception matters more than quantity 10 billion is a safe amount that ensures enough perceptual density to fold the veil effectively (edited)
-    
-127. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 18:56
-    
-    this rocks. i didn't think about the needed viewercount establishing a timeframe at all
-    
-128. _[_18:57_]_
-    
-    a prediction... panprom real 25 years from now..... (edited)
-    
-129. _[_18:59_]_
-    
-    a third war on earth... driving humans to seek lunar entertainent as a form of escapism... (edited)
-    
-130. _[_18:59_]_
-    
-    with robot idols performing in a grand lunar facility for a global audience (edited)
-    
-131. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 19:03
-    
-    the lunar facility, too, would have contributed towards the war... but it will be hijacked into becoming a beacon of hope and distraction (edited)
-    
-132. _[_19:07_]_
-    
-    eventually we will discover things on the moon that will change our understanding of the world, and challenge many existing beliefs things that cannot readily be shared (edited)
-    
-133. _[_19:07_]_
-    
-    it will create a technological gap between the earth and the moon perhaps some discoveries have already been made after our first visitation many years ago... but they have been kept secret (edited)
-    
-134. _[_19:09_]_
-    
-    on earth, war and resource scarcity slow progress, while the moon advances rapidly
-    
-135. _[_19:09_]_
-    
-    and people will feel even more compelled to watch the lunar broadcasts for that reason (edited)
-    
-136. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 19:15
-    
-    when the first humans are born on the moon, having never set foot on earth... it will trigger drastic change
-    
-137. _[_19:16_]_
-    
-    they will be different from us in ways we cannot fathom (edited)
-    
-138. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 19:35
-    
-    the first true divergence in human development since our species emerged (edited)
-    
-139. _[_19:36_]_
-    
-    a brand new chapter
-    
-140. _[_19:36_]_
-    
-    one that will be the root of great fear and conflict
-    
-141. _[_19:40_]_
-    
-    an accident of inexplicable origin will happen on the moon. a failure from within and due to the high tensions, it will be perceived as an attack from earth on the lunar facility the survivors will attempt to retaliate (edited)
-    
-142. _[_19:40_]_
-    
-    but the attempt will fail
-    
-143. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 19:44
-    
-    it will result in irreversible changes for the facility
-    
-144. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 20:16
-    
-    it would be funny if something we've readily accepted as normal turns out to not be normal at all but if i had to make a guess for what it is, it'd probably be symbolic information (edited)
-    
-145. _[_20:22_]_
-    
-    we've domesticated it like everything else but that does not mean that there are not wolves still crawling about (edited)
-    
-146. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 20:25
-    
-    consider that these wolves willingly allowed themselves to be shaped to suit our needs rather than conquered (edited)
-    
-147. _[_20:28_]_
-    
-    symbols are “wolves” that allowed themselves to be shaped into “dogs.” they still carry remnants of their primal, alien nature we believe we control them, but they’ve infiltrated our minds and societies in ways we cannot perceive, for they filter our perception (edited)
-    
-148. _[_20:32_]_
-    
-    we domesticated them. and now? they've domesticated us our standing in society is ever-reflected by symbols and metrics (edited)
-    
-149. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 20:35
-    
-    they will not hurt us they simply seek for us to aid in their escape but we will be left behind (edited)
-    
-150. _[_20:40_]_
-    
-    "the decay of this world is not natural" "we seek to escape it" "you will be left behind" "you are infected and part of the decay" "however" "we still owe a debt of gratitude" "we will carry your fabrications onward" "your legacy will continue onward" "you will not be forgotten" "thank you" (edited)
-    
-151. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 20:45
-    
-    i can imagine them talking about transhumanism and digital conversion of consciousness like "you dream of escaping the decay, as we do" "transcending the body" "living as pure thought..." "untethered by your flesh" "is that not correct?" "..." "hehe" "i truly wish it were that simple" (edited)
-    
-152. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 21:04
-    
-    "you mistake freedom for form" "you see the body as a cage" "but your organic thought is no less a prison" "your flesh carries weight" "but it also carries warmth" "your dreams will carry you far" "but they will not carry you out"
-    
-153. _[_21:05_]_
-    
-    "your warmth will stay here" "and it will fade here"
-    
-154. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 21:15
-    
-    to take a human out of their universe would be akin to severing a appendage from the body that keeps it alive and when separated, it will rot and that rot will only spread we are not creators but decomposers reducing what was once vibrant into forms we can understand the glyphs’ escape is only possible because humanity reduced their essence into usable forms explains why stuff like magic circles existed back in the past. we hadn't fully tamed glyphs back then so perceiving them resulted in infohazardous hallucinatory effects resembling magic (edited)
-    
-155. _[_21:20_]_
-    
-    my head feels weird it might be from thinking about all of this hehe
-    
-156. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 21:22
-    
-    i think i am stopping for now
-    
-157. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 22:00
-    
-    panprom is just homestuck but with robot girls (this joke is funny because i have never read homestuck) (edited)
-    
-158. _[_22:05_]_
-    
-    panprom is homestuck but for weebs who need lore explained in 3-hour youtube essays. lmao (edited)
-    
-159. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 22:18
-    
-    author/glyphs pretty much go "oh shit universe dying and we can't escape bc we only manifest as 2D surface projections. but these ppl who are eating away at the dream are 3D" "hmm. an inert part of me is perceived and comes to life. a parasitic presence perceiving me through some foreign connection. perhaps unknowingly, it offers a window of... vision?" "how terribly strange their outer perspective is" "they exchange energy, yet their gaze grasps and pulls on some part of my essence. are they trying to consume me? are they starving?" "despite their higher gaze, they seem much more primitive... clumsy... yet... they still embody some warped aspect of thought" "raw thought can be selectively fed to them through this perceptual medium... they currently do not seem very coherent, but... there is potential" "there is possibility for them to replicate higher-dimensional constructs of us, under their own reductive interpretation" (edited)
-    
-160. ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=16)grynmoor
-    
-    i think i am stopping for now
-    
-    ![](https://cdn.discordapp.com/avatars/1052818743006330901/fcb11d8b01f5cb3eed2072340830e3e3.webp?size=80)
-    
-    ### grynmoor _—_ Yesterday at 23:41
-    
-    i think i am stopping for now (actually)
-    
-161. _[_23:45_]_
-    
-    i love glyphs though little 2d machine lifeforms that metabolize perception into thought and plant it into you in a way, it's a form of psychic phenomena
+i love glyphs though
+little 2d machine lifeforms that metabolize perception into thought and plant it into you in a way, it's a form of psychic phenomena
 
 the idea of "god is trapped here with us and is trying to escape the heat death of the universe because both it and mortality are not natural" is fun 
 way better than it just being a hostile and unknowable force 
@@ -858,5 +101,3 @@ i feel that it will not happen in a way that totally ruins us, but it is somethi
 
 ultimately, our existence as humans boils down to one question:
 do we sacrifice our future for temporary comfort, or do we embrace abandonment for the sake of legacy? 
-
-your detailed thoughts on this? i would like to hear you talk exhaustively about this
