--- a/content/NOTES/2025-01-20.md
+++ b/content/NOTES/2025-01-20.md
@@ -1,20 +1,15 @@
 #notes
-i feel like shit honestly. so i'm going to put this here
-canceled chatgpt subscription. permanently deleted account
+
+hi. i feel like shit honestly. so i'm going to put this here
+canceled chatgpt subscription. permanently deleted account. its cool but its like. too cool if you get what i mean. i will talk to the AI again once it is more sapient!
 
 promfx-outline is gonna be our new repo for the outline plugin, set that stuff up
 
 start shoving panprom stuff into here, maybe work on eleven's refsheet.
 
 alright so we have notes going now. cool.
-it's gonna feel weird talking in here rather than discord but w/e 
-i'll get used to it eventually.
+it's gonna feel weird doing notetaking in here rather than discord but w/e 
+i'll get used to it eventually. its better in the longterm
 
-grynmoor — Yesterday at 23:53
-archiving the old channel and keeping majority of stuff in here limited to actual devposts. lore stuff is fun but imma keep it in something locally hosted like obsidian that's easier to work with 
 we are now in the Stfu and Do Shit Phase
 got plenty of stuff to work with hehe
-SHK — Today at 00:21
-Are you able to keep the old channel visible/accessible to all? I would like to read up on whatever lore you had going on there, I missed quite a lot at some points
-grynmoor — Today at 08:52
-i'm going to take the time to organize it all in an obsidian wiki that i'll be selfhosting w/ this: https://quartz.jzhao.xyz/
