Quartz sync: Jan 20, 2025, 6:44 PM

--- a/content/NOTES/2025-01-20.md
+++ b/content/NOTES/2025-01-20.md
@@ -1,7 +1,8 @@
 #notes
 
 hi. i feel like shit honestly. so i'm going to put this here
-canceled chatgpt subscription. permanently deleted account. its cool but its like. too cool if you get what i mean. i will talk to the AI again once it is more sapient!
+
+canceled da chatgpt subscription. permanently deleted account. its cool but its like. too cool if you get what i mean. i will talk to the AI again once it is more sapient!
 
 promfx-outline is gonna be our new repo for the outline plugin, set that stuff up
 
