Quartz sync: Jan 21, 2025, 3:01 PM

--- a/content/NOTES/2025-01-21.md
+++ b/content/NOTES/2025-01-21.md
@@ -1,3 +1,5 @@
+![[Pasted image 20250121150052.png]]
+
 elebun.........
 gonna make a refsheet for her so i can model her
 i love her goofy little antennae
