Quartz sync: Jan 21, 2025, 3:04 PM

--- a/content/NOTES/2025-01-21.md
+++ b/content/NOTES/2025-01-21.md
@@ -1,6 +1,10 @@
+---
+tags:
+  - notes
+---
 ![[Pasted image 20250121150052.png]]
 
-elebun.........
+[[ELEVEN|elebun]].........
 gonna make a refsheet for her so i can model her
 i love her goofy little antennae
 
