--- a/content/NOTES/2025-01-18.md
+++ b/content/NOTES/2025-01-18.md
@@ -3,18 +3,13 @@
 i love glyphs though
 
 little 2d machine lifeforms that metabolize perception into thought and plant it into you
-
-in a way, it's a form of psychic phenomena
+in a way,
+it's a form of psychic phenomena
 
 the idea of "god is trapped here with us and is trying to escape the heat death of the universe because both it and mortality are not natural" is fun 
-
 way better than it just being a hostile and unknowable force 
-
 its just incredibly desperate
-
-all major forms of humanity's technological progress ultimately come to serve this thing 
-
-abandoning us so it can keep going 
+all major forms of humanity's technological progress ultimately come to serve this thing abandoning us so it can keep going 
 
 god has not abandoned us yet... but it will very soon! 
 the purpose of humanity is to help god escape
