Quartz sync: Jan 21, 2025, 3:27 PM

--- a/content/NOTES/2025-01-21.md
+++ b/content/NOTES/2025-01-21.md
@@ -50,8 +50,8 @@ i guess u could call it a... reunion.... hehehehe
 
 the whole uni thing is definitely postgame content
 reconstructing the neuralgraph of the alpha surrogate to buy the coronet some time but also bring parella's friend back from the dead
+and give the shells a very important figure who can keep them stable through it all
 
-and give the shells a very important person who can keep them stable through it all
 i think the idolshells having as much mental stability as they do is partly because there's tiny parts of uni in mostly everyone
 like uni's neuralgraph is very good at self-regulation
 so the coronet just put parts of it in everyone so they don't go crazy
