Quartz sync: Jan 21, 2025, 3:32 PM

--- a/content/NOTES/2025-01-21.md
+++ b/content/NOTES/2025-01-21.md
@@ -13,7 +13,7 @@ like her appearance. its an unused shell model. coronet just picked the one that
 she doesnt start off with the twintails, she gets instanced w/o them 
 
 like her whole purpose was to not be good at the viewership game so she'd fail her first debut match and coronet could quietly guide her along in the lower sectors
-to do her job of deallocating the warshells... but that failed ofc
+to do her job of deallocating the warshells... but that failed ofc...
 
 now she's just an idolshell with task manager privileges who could theoretically deallocate
 everyone if she ever becomes aware of the fact that she can just. erase ppl w/ her reson crucible 
