Quartz sync: Jan 21, 2025, 3:39 PM

--- a/content/NOTES/2025-01-18.md
+++ b/content/NOTES/2025-01-18.md
@@ -1,5 +1,7 @@
-#notes
-
+---
+tags:
+  - notes
+---
 i love glyphs though
 
 little 2d machine lifeforms that metabolize perception into thought and plant it into you
