--- a/content/NOTES/2025-01-20.md
+++ b/content/NOTES/2025-01-20.md
@@ -1,5 +1,7 @@
-#notes
-
+---
+tags:
+  - notes
+---
 hi. i feel like shit honestly. so i'm going to put this here
 
 canceled da chatgpt subscription. permanently deleted account. its cool but its like. too cool if you get what i mean. i will talk to the AI again once it is more sapient!
